Rename the IoTivity folder for adding Service libraries in future

--- a/smarthome_companion/build.gradle
+++ b/smarthome_companion/build.gradle
@@ -35,7 +35,7 @@ android {
 
 repositories {
     flatDir {
-        dirs '../iotivity-1.1.1 base library'
+        dirs '../iotivity-1.1.1'
     }
 }
 
