--- a/blink/build.gradle
+++ b/blink/build.gradle
@@ -10,27 +10,16 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        jackOptions {
-            enabled true
-        }
     }
     buildTypes {
-        debug {
-            multiDexEnabled true
-        }
         release {
-            multiDexEnabled true
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.brillo:iot-sdk:0.6'
+    provided 'com.google.android.things:androidthings:0.1-devpreview'
 }
