--- a/blink/src/main/AndroidManifest.xml
+++ b/blink/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
         android:allowBackup="true"
         android:icon="@android:drawable/sym_def_app_icon"
         android:label="@string/app_name">
+        <uses-library android:name="com.google.android.things"/>
         <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
                 <!-- The IoTLauncher will launch an app with the following intent filter -->
-                <action android:name="com.android.IOT" />
+                <category android:name="android.intent.category.IOT_LAUNCHER"/>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
