--- a/smarthome_companion/build.gradle
+++ b/smarthome_companion/build.gradle
@@ -26,5 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.+'
     compile 'com.android.support:cardview-v7:23.+'
     compile 'com.larswerkman:HoloColorPicker:1.5'
-    compile 'org.iotivity:base:1.3.0'
+    compile 'org.iotivity:base:1.3.0-secured'
 }
