iotivity-console: initial development using Resource Encapsulation

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':smarthome_companion', ':blink', ':lcd', ':led'
+include ':smarthome_companion', ':iotivity-console', ':blink', ':lcd', ':led'
